# quantumsafe-solana

./: .gas-snapshot  .gitignore  LICENSE.txt  README.md  foundry.toml
snapshots/: PORSTTest.json
solana/: .gitignore  Anchor.toml  Cargo.toml  README.md  SECURITY.md  package.json  tsconfig.json
solana/agent/: README.md  bootstrap.ts  llm.ts  oracle.ts  perp-bootstrap.ts  perp-e2e.ts  perp-llm.ts  perp-policy.ts  perp-routes.ts  perp.ts  pipeline.ts  policy.ts  sdk.ts  server.ts
solana/agent/signer/: client.ts  daemon.cjs
solana/app/: porstWallet.ts
solana/core/: Cargo.toml
solana/core/src/: lib.rs
solana/programs/cpswap/: Cargo.toml
solana/programs/cpswap/src/: lib.rs
solana/programs/porst/: Cargo.toml
solana/programs/porst/src/: lib.rs  reference.rs  verify.rs
solana/programs/porst_agent/: Cargo.toml
solana/programs/porst_agent/src/: lib.rs
solana/programs/porst_perp/: Cargo.toml
solana/programs/porst_perp/src/: lib.rs
solana/programs/porst_wallet/: Cargo.toml
solana/programs/porst_wallet/src/: lib.rs
solana/scripts/: deploy.sh
solana/signer/: Cargo.toml
solana/signer/src/: lib.rs  main.rs
solana/tests/: porst.ts  porst_agent.ts  porst_wallet.ts  vectors.json
solana/wasm/: Cargo.toml  README.md  parity-test.js
solana/wasm/src/: lib.rs
solana/web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
solana/web/src/: App.tsx  Perp.tsx  api.ts  styles.css
src/: PORST.sol
src/interfaces/: IERC1271.sol
test/: PORST.t.sol
