[package]
name = "porst-signer"
version = "0.1.0"
description = "Hardened off-chain keygen + many-time (PORST/XMSS) signing library and CLI for the PORST Solana wallet."
edition = "2021"

[lib]
name = "porst_signer"

[[bin]]
name = "porst-signer"
path = "src/main.rs"

[dependencies]
porst-core = { path = "../core" }
solana-keccak-hasher = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
