[package]
name = "porst_perp"
version = "0.1.0"
description = "PORST/XMSS post-quantum authorization for a Solana perpetual-futures engine: positions open/close only with a valid post-quantum signature."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "porst_perp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
porst-core = { path = "../../core" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
