[package]
name = "porst_wallet"
version = "0.1.0"
description = "Post-quantum (PORST/XMSS) many-time smart-contract wallet for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "porst_wallet"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
porst-core = { path = "../../core" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
